spec/e2e/assignment/infix_operator.lit
let a = "a";
let b = "b";
a + b = "value"; # error: [line 3] Error at "=": Invalid assignment target.
